8189777: jlink --module-path default value and automatic addition of $JAVA_HOME/jmods if java.base is missing
Reviewed-by: alanb, mchung